# music-club

./: .gitignore  README.md  REQUIREMENTS.txt  db.sqlite3  manage.py  pyproject.toml
albumclub/: asgi.py  settings.py  urls.py  wsgi.py
albumclub/api/: admin.py  apps.py  models.py  serializers.py  views.py
albumclub/api/migrations/: 0001_initial.py  0002_remove_post_user_post_artwork.py  0003_rename_post_album.py
albumclub/spa/: apps.py
albumclub/static/frontend/: bundle.js  bundle.js.map
albumclub/staticfiles/: staticfiles.json
albumclub/staticfiles/frontend/: bundle.4e4fe149e673.js
albumclub/templates/registration/: login.html
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte  dummydata.json  routes.js
frontend/src/components/: album.svelte
frontend/src/components/atoms/: AlbumAbout.svelte  AlbumArt.svelte  AlbumGenre.svelte  AlbumTitle.svelte  Comment.svelte  CommentCount.svelte  CommentInput.svelte  CommentSubmit.svelte
frontend/src/components/atoms/Album/: AlbumTitle.svelte
frontend/src/components/atoms/Comment/: Comment.svelte  CommentInput.svelte
frontend/src/components/atoms/Nav/: NavBarLinks.svelte
frontend/src/components/atoms/Page/: PageTitle.svelte
frontend/src/components/atoms/Search/: SearchButton.svelte  SearchInput.svelte
frontend/src/components/molecules/: AlbumHeader.svelte  AlbumInfo.svelte  CommentDisplay.svelte  CommentForm.svelte
frontend/src/components/organisms/: Album.svelte  Comments.svelte  Header.svelte
frontend/src/pages/: AlbumPage.svelte  HomePage.svelte
(+6 files in other folders)
