[tool.poetry]
name = "album-club"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "album_club"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
whitenoise = "^6.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
